added flip flop to object oriented tasks

--- a/ipython notebooks/RDM analysis.ipynb
+++ b/ipython notebooks/RDM analysis.ipynb
@@ -110,32 +110,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    " #model params\n",
-    "n_in = 1\n",
-    "n_hidden = 50 \n",
-    "n_out = 1\n",
-    "#n_steps = 80 \n",
-    "tau = 100.0 #As double\n",
-    "dt = 20.0  #As double\n",
-    "dale_ratio = None\n",
-    "rec_noise = 0.0\n",
-    "stim_noise = 0.1\n",
-    "batch_size = 128\n",
-    "#var_delay_length = 50\n",
-    "cohs = [.01,.05,.1,.2,.4]\n",
-    "rt_version = True\n",
-    "\n",
-    "#train params\n",
-    "learning_rate = .0001\n",
-    "training_iters = 300000\n",
-    "display_step = 50"
+    "ff = task.flip_flop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(128, 24, 2)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gen = ff.generate_train_trials()\n",
+    "gen.next()[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
