added object oriented initialization and default

--- a/notebooks/Refactor tests.ipynb
+++ b/notebooks/Refactor tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -68,18 +68,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "tf.reset_default_graph()\n",
     "model = Basic(params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -99,96 +100,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter 640, Minibatch Loss= 0.208765\n",
-      "Iter 1280, Minibatch Loss= 0.183379\n",
-      "Iter 1920, Minibatch Loss= 0.206958\n",
-      "Iter 2560, Minibatch Loss= 0.192108\n",
-      "Iter 3200, Minibatch Loss= 0.106321\n",
-      "Iter 3840, Minibatch Loss= 0.052352\n",
-      "Iter 4480, Minibatch Loss= 0.059082\n",
-      "Iter 5120, Minibatch Loss= 0.009613\n",
-      "Iter 5760, Minibatch Loss= 0.008755\n",
-      "Iter 6400, Minibatch Loss= 0.009582\n",
-      "Iter 7040, Minibatch Loss= 0.005340\n",
-      "Iter 7680, Minibatch Loss= 0.006166\n",
-      "Iter 8320, Minibatch Loss= 0.004596\n",
-      "Iter 8960, Minibatch Loss= 0.004326\n",
-      "Iter 9600, Minibatch Loss= 0.004362\n",
-      "Iter 10240, Minibatch Loss= 0.004715\n",
-      "Iter 10880, Minibatch Loss= 0.003946\n",
-      "Iter 11520, Minibatch Loss= 0.003762\n",
-      "Iter 12160, Minibatch Loss= 0.004884\n",
-      "Iter 12800, Minibatch Loss= 0.004252\n",
-      "Iter 13440, Minibatch Loss= 0.004115\n",
-      "Iter 14080, Minibatch Loss= 0.004036\n",
-      "Iter 14720, Minibatch Loss= 0.004151\n",
-      "Iter 15360, Minibatch Loss= 0.003999\n",
-      "Iter 16000, Minibatch Loss= 0.003195\n",
-      "Iter 16640, Minibatch Loss= 0.003441\n",
-      "Iter 17280, Minibatch Loss= 0.003415\n",
-      "Iter 17920, Minibatch Loss= 0.003740\n",
-      "Iter 18560, Minibatch Loss= 0.003252\n",
-      "Iter 19200, Minibatch Loss= 0.003158\n",
-      "Iter 19840, Minibatch Loss= 0.003385\n",
-      "Iter 20480, Minibatch Loss= 0.003074\n",
-      "Iter 21120, Minibatch Loss= 0.002962\n",
-      "Iter 21760, Minibatch Loss= 0.003326\n",
-      "Iter 22400, Minibatch Loss= 0.002772\n",
-      "Iter 23040, Minibatch Loss= 0.003128\n",
-      "Iter 23680, Minibatch Loss= 0.003437\n",
-      "Iter 24320, Minibatch Loss= 0.003728\n",
-      "Iter 24960, Minibatch Loss= 0.002765\n",
-      "Iter 25600, Minibatch Loss= 0.003122\n",
-      "Iter 26240, Minibatch Loss= 0.003175\n",
-      "Iter 26880, Minibatch Loss= 0.002810\n",
-      "Iter 27520, Minibatch Loss= 0.002878\n",
-      "Iter 28160, Minibatch Loss= 0.002868\n",
-      "Iter 28800, Minibatch Loss= 0.002762\n",
-      "Iter 29440, Minibatch Loss= 0.002462\n",
-      "Iter 30080, Minibatch Loss= 0.002583\n",
-      "Iter 30720, Minibatch Loss= 0.002371\n",
-      "Iter 31360, Minibatch Loss= 0.002725\n",
-      "Iter 32000, Minibatch Loss= 0.002233\n",
-      "Iter 32640, Minibatch Loss= 0.001943\n",
-      "Iter 33280, Minibatch Loss= 0.001907\n",
-      "Iter 33920, Minibatch Loss= 0.002033\n",
-      "Iter 34560, Minibatch Loss= 0.001905\n",
-      "Iter 35200, Minibatch Loss= 0.002090\n",
-      "Iter 35840, Minibatch Loss= 0.001912\n",
-      "Iter 36480, Minibatch Loss= 0.001984\n",
-      "Iter 37120, Minibatch Loss= 0.001968\n",
-      "Iter 37760, Minibatch Loss= 0.001865\n",
-      "Iter 38400, Minibatch Loss= 0.002073\n",
-      "Iter 39040, Minibatch Loss= 0.001722\n",
-      "Iter 39680, Minibatch Loss= 0.001814\n",
-      "Iter 40320, Minibatch Loss= 0.001751\n",
-      "Iter 40960, Minibatch Loss= 0.001928\n",
-      "Iter 41600, Minibatch Loss= 0.001523\n",
-      "Iter 42240, Minibatch Loss= 0.001451\n",
-      "Iter 42880, Minibatch Loss= 0.001805\n",
-      "Iter 43520, Minibatch Loss= 0.001594\n",
-      "Iter 44160, Minibatch Loss= 0.001661\n",
-      "Iter 44800, Minibatch Loss= 0.001561\n",
-      "Iter 45440, Minibatch Loss= 0.001466\n",
-      "Iter 46080, Minibatch Loss= 0.001387\n",
-      "Iter 46720, Minibatch Loss= 0.001677\n",
-      "Iter 47360, Minibatch Loss= 0.001431\n",
-      "Iter 48000, Minibatch Loss= 0.001301\n",
-      "Iter 48640, Minibatch Loss= 0.001597\n",
-      "Iter 49280, Minibatch Loss= 0.001735\n",
-      "Iter 49920, Minibatch Loss= 0.001258\n",
-      "Optimization finished!\n"
+      "Iter 640, Minibatch Loss= 0.202411\n",
+      "Iter 1280, Minibatch Loss= 0.213777\n",
+      "Iter 1920, Minibatch Loss= 0.129500\n",
+      "Iter 2560, Minibatch Loss= 0.179772\n",
+      "Iter 3200, Minibatch Loss= 0.072311\n",
+      "Iter 3840, Minibatch Loss= 0.113412\n",
+      "Iter 4480, Minibatch Loss= 0.084910\n",
+      "Iter 5120, Minibatch Loss= 0.142856\n",
+      "Iter 5760, Minibatch Loss= 0.099546\n",
+      "Iter 6400, Minibatch Loss= 0.132172\n",
+      "Iter 7040, Minibatch Loss= 0.025790\n",
+      "Iter 7680, Minibatch Loss= 0.008105\n",
+      "Iter 8320, Minibatch Loss= 0.010748\n",
+      "Iter 8960, Minibatch Loss= 0.006331\n",
+      "Iter 9600, Minibatch Loss= 0.006036\n",
+      "Iter 10240, Minibatch Loss= 0.006478\n",
+      "Iter 10880, Minibatch Loss= 0.005523\n",
+      "Iter 11520, Minibatch Loss= 0.004862\n",
+      "Iter 12160, Minibatch Loss= 0.004675\n",
+      "Iter 12800, Minibatch Loss= 0.004127\n",
+      "Iter 13440, Minibatch Loss= 0.004599\n",
+      "Iter 14080, Minibatch Loss= 0.003941\n",
+      "Iter 14720, Minibatch Loss= 0.003753\n",
+      "Iter 15360, Minibatch Loss= 0.003615\n",
+      "Iter 16000, Minibatch Loss= 0.003669\n",
+      "Iter 16640, Minibatch Loss= 0.003300\n",
+      "Iter 17280, Minibatch Loss= 0.003469\n",
+      "Iter 17920, Minibatch Loss= 0.003255\n",
+      "Iter 18560, Minibatch Loss= 0.003585\n",
+      "Iter 19200, Minibatch Loss= 0.003162\n",
+      "Iter 19840, Minibatch Loss= 0.003043\n",
+      "Iter 20480, Minibatch Loss= 0.002580\n",
+      "Iter 21120, Minibatch Loss= 0.002398\n",
+      "Iter 21760, Minibatch Loss= 0.002632\n",
+      "Iter 22400, Minibatch Loss= 0.002407\n",
+      "Iter 23040, Minibatch Loss= 0.002421\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(108.69931697845459, 55.226983070373535)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
