added object oriented initialization

--- a/notebooks/Refactor tests.ipynb
+++ b/notebooks/Refactor tests.ipynb
@@ -91,9 +91,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -135,8 +136,61 @@
       "Iter 21120, Minibatch Loss= 0.002398\n",
       "Iter 21760, Minibatch Loss= 0.002632\n",
       "Iter 22400, Minibatch Loss= 0.002407\n",
-      "Iter 23040, Minibatch Loss= 0.002421\n"
+      "Iter 23040, Minibatch Loss= 0.002421\n",
+      "Iter 23680, Minibatch Loss= 0.002320\n",
+      "Iter 24320, Minibatch Loss= 0.002234\n",
+      "Iter 24960, Minibatch Loss= 0.002144\n",
+      "Iter 25600, Minibatch Loss= 0.002205\n",
+      "Iter 26240, Minibatch Loss= 0.001945\n",
+      "Iter 26880, Minibatch Loss= 0.002114\n",
+      "Iter 27520, Minibatch Loss= 0.001940\n",
+      "Iter 28160, Minibatch Loss= 0.001666\n",
+      "Iter 28800, Minibatch Loss= 0.001669\n",
+      "Iter 29440, Minibatch Loss= 0.001987\n",
+      "Iter 30080, Minibatch Loss= 0.002057\n",
+      "Iter 30720, Minibatch Loss= 0.002110\n",
+      "Iter 31360, Minibatch Loss= 0.002066\n",
+      "Iter 32000, Minibatch Loss= 0.001693\n",
+      "Iter 32640, Minibatch Loss= 0.002580\n",
+      "Iter 33280, Minibatch Loss= 0.001473\n",
+      "Iter 33920, Minibatch Loss= 0.002980\n",
+      "Iter 34560, Minibatch Loss= 0.001868\n",
+      "Iter 35200, Minibatch Loss= 0.002086\n",
+      "Iter 35840, Minibatch Loss= 0.001507\n",
+      "Iter 36480, Minibatch Loss= 0.001535\n",
+      "Iter 37120, Minibatch Loss= 0.001630\n",
+      "Iter 37760, Minibatch Loss= 0.001636\n",
+      "Iter 38400, Minibatch Loss= 0.001641\n",
+      "Iter 39040, Minibatch Loss= 0.001226\n",
+      "Iter 39680, Minibatch Loss= 0.001568\n",
+      "Iter 40320, Minibatch Loss= 0.001465\n",
+      "Iter 40960, Minibatch Loss= 0.001444\n",
+      "Iter 41600, Minibatch Loss= 0.001444\n",
+      "Iter 42240, Minibatch Loss= 0.001359\n",
+      "Iter 42880, Minibatch Loss= 0.001487\n",
+      "Iter 43520, Minibatch Loss= 0.001364\n",
+      "Iter 44160, Minibatch Loss= 0.001171\n",
+      "Iter 44800, Minibatch Loss= 0.001130\n",
+      "Iter 45440, Minibatch Loss= 0.001445\n",
+      "Iter 46080, Minibatch Loss= 0.001614\n",
+      "Iter 46720, Minibatch Loss= 0.001013\n",
+      "Iter 47360, Minibatch Loss= 0.001146\n",
+      "Iter 48000, Minibatch Loss= 0.001082\n",
+      "Iter 48640, Minibatch Loss= 0.001267\n",
+      "Iter 49280, Minibatch Loss= 0.001098\n",
+      "Iter 49920, Minibatch Loss= 0.001058\n",
+      "Optimization finished!\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(118.91323494911194, 54.42045617103577)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -334,91 +388,91 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter 640, Minibatch Loss= 0.112843\n",
-      "Iter 1280, Minibatch Loss= 0.141185\n",
-      "Iter 1920, Minibatch Loss= 0.145554\n",
-      "Iter 2560, Minibatch Loss= 0.107200\n",
-      "Iter 3200, Minibatch Loss= 0.133574\n",
-      "Iter 3840, Minibatch Loss= 0.180119\n",
-      "Iter 4480, Minibatch Loss= 0.126402\n",
-      "Iter 5120, Minibatch Loss= 0.149859\n",
-      "Iter 5760, Minibatch Loss= 0.175305\n",
-      "Iter 6400, Minibatch Loss= 0.119545\n",
-      "Iter 7040, Minibatch Loss= 0.125494\n",
-      "Iter 7680, Minibatch Loss= 0.180604\n",
-      "Iter 8320, Minibatch Loss= 0.165877\n",
-      "Iter 8960, Minibatch Loss= 0.159016\n",
-      "Iter 9600, Minibatch Loss= 0.126154\n",
-      "Iter 10240, Minibatch Loss= 0.121329\n",
-      "Iter 10880, Minibatch Loss= 0.152613\n",
-      "Iter 11520, Minibatch Loss= 0.158621\n",
-      "Iter 12160, Minibatch Loss= 0.122239\n",
-      "Iter 12800, Minibatch Loss= 0.118344\n",
-      "Iter 13440, Minibatch Loss= 0.126027\n",
-      "Iter 14080, Minibatch Loss= 0.144586\n",
-      "Iter 14720, Minibatch Loss= 0.174716\n",
-      "Iter 15360, Minibatch Loss= 0.147843\n",
-      "Iter 16000, Minibatch Loss= 0.149108\n",
-      "Iter 16640, Minibatch Loss= 0.142480\n",
-      "Iter 17280, Minibatch Loss= 0.126185\n",
-      "Iter 17920, Minibatch Loss= 0.094967\n",
-      "Iter 18560, Minibatch Loss= 0.125861\n",
-      "Iter 19200, Minibatch Loss= 0.138617\n",
-      "Iter 19840, Minibatch Loss= 0.181262\n",
-      "Iter 20480, Minibatch Loss= 0.143269\n",
-      "Iter 21120, Minibatch Loss= 0.147708\n",
-      "Iter 21760, Minibatch Loss= 0.121903\n",
-      "Iter 22400, Minibatch Loss= 0.141269\n",
-      "Iter 23040, Minibatch Loss= 0.182737\n",
-      "Iter 23680, Minibatch Loss= 0.123872\n",
-      "Iter 24320, Minibatch Loss= 0.121887\n",
-      "Iter 24960, Minibatch Loss= 0.097788\n",
-      "Iter 25600, Minibatch Loss= 0.181087\n",
-      "Iter 26240, Minibatch Loss= 0.102294\n",
-      "Iter 26880, Minibatch Loss= 0.104209\n",
-      "Iter 27520, Minibatch Loss= 0.169656\n",
-      "Iter 28160, Minibatch Loss= 0.101077\n",
-      "Iter 28800, Minibatch Loss= 0.101298\n",
-      "Iter 29440, Minibatch Loss= 0.144372\n",
-      "Iter 30080, Minibatch Loss= 0.101186\n",
-      "Iter 30720, Minibatch Loss= 0.127253\n",
-      "Iter 31360, Minibatch Loss= 0.088198\n",
-      "Iter 32000, Minibatch Loss= 0.144180\n",
-      "Iter 32640, Minibatch Loss= 0.139809\n",
-      "Iter 33280, Minibatch Loss= 0.141056\n",
-      "Iter 33920, Minibatch Loss= 0.128115\n",
-      "Iter 34560, Minibatch Loss= 0.078337\n",
-      "Iter 35200, Minibatch Loss= 0.145151\n",
-      "Iter 35840, Minibatch Loss= 0.108385\n",
-      "Iter 36480, Minibatch Loss= 0.123356\n",
-      "Iter 37120, Minibatch Loss= 0.122630\n",
-      "Iter 37760, Minibatch Loss= 0.130275\n",
-      "Iter 38400, Minibatch Loss= 0.127677\n",
-      "Iter 39040, Minibatch Loss= 0.114633\n",
-      "Iter 39680, Minibatch Loss= 0.131069\n",
-      "Iter 40320, Minibatch Loss= 0.119335\n",
-      "Iter 40960, Minibatch Loss= 0.181657\n",
-      "Iter 41600, Minibatch Loss= 0.173829\n",
-      "Iter 42240, Minibatch Loss= 0.107109\n",
-      "Iter 42880, Minibatch Loss= 0.141951\n",
-      "Iter 43520, Minibatch Loss= 0.120996\n",
-      "Iter 44160, Minibatch Loss= 0.141906\n",
-      "Iter 44800, Minibatch Loss= 0.097952\n",
-      "Iter 45440, Minibatch Loss= 0.142406\n",
-      "Iter 46080, Minibatch Loss= 0.176744\n",
-      "Iter 46720, Minibatch Loss= 0.159174\n",
-      "Iter 47360, Minibatch Loss= 0.089773\n",
-      "Iter 48000, Minibatch Loss= 0.089562\n",
-      "Iter 48640, Minibatch Loss= 0.062662\n",
-      "Iter 49280, Minibatch Loss= 0.091291\n",
-      "Iter 49920, Minibatch Loss= 0.069719\n",
+      "Iter 640, Minibatch Loss= 0.195098\n",
+      "Iter 1280, Minibatch Loss= 0.155132\n",
+      "Iter 1920, Minibatch Loss= 0.115115\n",
+      "Iter 2560, Minibatch Loss= 0.183497\n",
+      "Iter 3200, Minibatch Loss= 0.128513\n",
+      "Iter 3840, Minibatch Loss= 0.124257\n",
+      "Iter 4480, Minibatch Loss= 0.179334\n",
+      "Iter 5120, Minibatch Loss= 0.133492\n",
+      "Iter 5760, Minibatch Loss= 0.125150\n",
+      "Iter 6400, Minibatch Loss= 0.152611\n",
+      "Iter 7040, Minibatch Loss= 0.166292\n",
+      "Iter 7680, Minibatch Loss= 0.139638\n",
+      "Iter 8320, Minibatch Loss= 0.124516\n",
+      "Iter 8960, Minibatch Loss= 0.159407\n",
+      "Iter 9600, Minibatch Loss= 0.111304\n",
+      "Iter 10240, Minibatch Loss= 0.176113\n",
+      "Iter 10880, Minibatch Loss= 0.181504\n",
+      "Iter 11520, Minibatch Loss= 0.136199\n",
+      "Iter 12160, Minibatch Loss= 0.146469\n",
+      "Iter 12800, Minibatch Loss= 0.128809\n",
+      "Iter 13440, Minibatch Loss= 0.147789\n",
+      "Iter 14080, Minibatch Loss= 0.160914\n",
+      "Iter 14720, Minibatch Loss= 0.135058\n",
+      "Iter 15360, Minibatch Loss= 0.172715\n",
+      "Iter 16000, Minibatch Loss= 0.137437\n",
+      "Iter 16640, Minibatch Loss= 0.148012\n",
+      "Iter 17280, Minibatch Loss= 0.172166\n",
+      "Iter 17920, Minibatch Loss= 0.143507\n",
+      "Iter 18560, Minibatch Loss= 0.160914\n",
+      "Iter 19200, Minibatch Loss= 0.146018\n",
+      "Iter 19840, Minibatch Loss= 0.157214\n",
+      "Iter 20480, Minibatch Loss= 0.116530\n",
+      "Iter 21120, Minibatch Loss= 0.170775\n",
+      "Iter 21760, Minibatch Loss= 0.120814\n",
+      "Iter 22400, Minibatch Loss= 0.146765\n",
+      "Iter 23040, Minibatch Loss= 0.143471\n",
+      "Iter 23680, Minibatch Loss= 0.185029\n",
+      "Iter 24320, Minibatch Loss= 0.119404\n",
+      "Iter 24960, Minibatch Loss= 0.136049\n",
+      "Iter 25600, Minibatch Loss= 0.110240\n",
+      "Iter 26240, Minibatch Loss= 0.088777\n",
+      "Iter 26880, Minibatch Loss= 0.171395\n",
+      "Iter 27520, Minibatch Loss= 0.170035\n",
+      "Iter 28160, Minibatch Loss= 0.123246\n",
+      "Iter 28800, Minibatch Loss= 0.145556\n",
+      "Iter 29440, Minibatch Loss= 0.132958\n",
+      "Iter 30080, Minibatch Loss= 0.153702\n",
+      "Iter 30720, Minibatch Loss= 0.108911\n",
+      "Iter 31360, Minibatch Loss= 0.099346\n",
+      "Iter 32000, Minibatch Loss= 0.126225\n",
+      "Iter 32640, Minibatch Loss= 0.125597\n",
+      "Iter 33280, Minibatch Loss= 0.095354\n",
+      "Iter 33920, Minibatch Loss= 0.114186\n",
+      "Iter 34560, Minibatch Loss= 0.111666\n",
+      "Iter 35200, Minibatch Loss= 0.169877\n",
+      "Iter 35840, Minibatch Loss= 0.104788\n",
+      "Iter 36480, Minibatch Loss= 0.093923\n",
+      "Iter 37120, Minibatch Loss= 0.078613\n",
+      "Iter 37760, Minibatch Loss= 0.106777\n",
+      "Iter 38400, Minibatch Loss= 0.091974\n",
+      "Iter 39040, Minibatch Loss= 0.090541\n",
+      "Iter 39680, Minibatch Loss= 0.098068\n",
+      "Iter 40320, Minibatch Loss= 0.108942\n",
+      "Iter 40960, Minibatch Loss= 0.104528\n",
+      "Iter 41600, Minibatch Loss= 0.079338\n",
+      "Iter 42240, Minibatch Loss= 0.152832\n",
+      "Iter 42880, Minibatch Loss= 0.081953\n",
+      "Iter 43520, Minibatch Loss= 0.117370\n",
+      "Iter 44160, Minibatch Loss= 0.096936\n",
+      "Iter 44800, Minibatch Loss= 0.120450\n",
+      "Iter 45440, Minibatch Loss= 0.124833\n",
+      "Iter 46080, Minibatch Loss= 0.140492\n",
+      "Iter 46720, Minibatch Loss= 0.127976\n",
+      "Iter 47360, Minibatch Loss= 0.055594\n",
+      "Iter 48000, Minibatch Loss= 0.055035\n",
+      "Iter 48640, Minibatch Loss= 0.074687\n",
+      "Iter 49280, Minibatch Loss= 0.057395\n",
+      "Iter 49920, Minibatch Loss= 0.068609\n",
       "Optimization finished!\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(111.13523697853088, 53.28712511062622)"
+       "(124.28856682777405, 72.06825804710388)"
       ]
      },
      "execution_count": 12,
